# PortfolioCS

./: > - Ścieżki Ruchu - zaprojektowana trasa, po której porusza się avatar automatycznie  GDD.md  PLAN.md  README.md  oldplan.md  requirements.txt
backend/: main.py
engine/: main.py
projects_cpp/hello_wasm/: CMakeLists.txt  main.cpp  shell.html
scripts/: compile_cpp.sh
static/: engine.apk  index.html
static/wasm/hello_wasm/: index.html
